fix: change LaunchScreen error

--- a/Chinggu/Chinggu/Info.plist
+++ b/Chinggu/Chinggu/Info.plist
@@ -7,7 +7,7 @@
 		<key>UIColorName</key>
 		<string>ddoPrimary</string>
 		<key>UIImageName</key>
-		<string>launchStonery</string>
+		<string>ddoLaunchScreen</string>
 	</dict>
 </dict>
 </plist>
